--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <span></span>
     </div>
     <div class="description">
-        <span>Tengo un regalo especial para ti!!</span>
+        <span>Tus flores a la distancia mi Viejita preciosa!!</span>
     </div>
     <div class="button">
         <button>
